# building-energy-load-forecast

./: .dockerignore  .gitignore  CHANGELOG.md  FILE_REGISTRY.md  LICENSE  Makefile  README.md  ROADMAP.md  TOKEN_EFFICIENCY_ENERGY.md  docker-compose.dev.yml  docker-compose.yml  env.example  extract_pdf.py  pyproject.toml  recover_metrics.py  requirements-dev.txt  requirements-intel.txt  requirements.txt  run_oslo.sh
.claude/commands/: retro.md  review-checklist.md  review.md  sprint.md
.claude/rules/: governance-expert.md
.github/workflows/: ci.yml  claude-review.yml
.obsidian/: workspace.json
config/: config.yaml
data/: README.md
data/Detailed Datasets description/: Oslo_README.txt
deployment/: Dockerfile  app.py  connectors.py  db_repository.py  docker-compose.yml  live_inference.py  mock_data.py  morning_advisory.py  myenergi_poller.py  requirements.txt  scheduler.py  schemas.py
deployment/connectors/: __init__.py  base.py  csv_ingest.py  hardware.py  markets.py  weather.py
deployment/routers/: control.py  health.py  meters.py
docs/: ACTION_PLAN_2026-03-01.md  ACTIVATION_FUNCTIONS.md  AIIA.md  AI_STUDIO_FEEDBACK.md  APP_PRODUCT_SPEC.md  ARCHITECTURE_AND_COMPARISON.md  COMMANDS.md  COMMERCIAL_ANALYSIS.md  COMPETITORS.md  DEPLOY_RUNBOOK.md  ENERGY_INTELLIGENCE_MODULE_BRIEF.md  EXPERIMENT_STATUS_REPORT.md  GOVERNANCE.md  HOW_TO_RUN.md  JOURNAL_PAPER_DRAFT.md  JOURNAL_PAPER_OUTLINE.md  MARKET_POSITIONING.md  METHODOLOGY_ARCHITECTURE.md  MODEL_CARD.md  PALLONETTO_EMAIL.md  PAPER_JOURNEY.md  PERSONAL_OS_ARCHITECTURE.md  PROJECT_OVERVIEW.md  PUBLIC_REPO_POLICY.md  README.md  REVIEWER_RESPONSE_MATRIX.md  ROADMAP.md  SESSION_LOG.md  SESSION_OVERVIEW.md  SMART_METER_ACCESS.md  SPRINT.md  STRATEGY.md  TEAM.md  TECH_STACK.md
docs/adr/: ADR-001-lightgbm-primary-model.md  ADR-002-stacking-ensemble-oof.md  ADR-003-oracle-safe-features.md  ADR-004-fastapi-deployment.md  ADR-005-mock-first-design.md  ADR-006-eu-ai-act-classification.md  ADR-007-quantile-regression-p10-p90.md  ADR-008-model-monitoring-drift.md  ADR-009-city-specific-processed-paths.md  ADR-010-lightgbm-only-production.md  ADR-011-consumer-app-tech-stack.md  ADR-012-timescaledb-over-influxdb-sqlite.md  ADR-013-irish-training-data-strategy.md  README.md
docs/api/: MYENERGI_FIELD_REFERENCE.md
docs/deployment/: LIVE_CONNECTOR_UPGRADE.md
docs/engineering/: BEST_PRACTICES.md  FEATURE_STORE_PATTERN.md  ISSUE_DOCUMENTATION_STANDARD.md  OPERATING_MODEL.md  PR_WORKFLOW.md  SOLAR_DATA_PIPELINE.md  TECH_STACK.md
docs/explainers/: DATA_PIPELINE_LIVE_EXPLAINED.md  EDDI_CT_TROUBLESHOOTING.md  FORECAST_ACCURACY_EXPLAINED.md  GRAFANA_DASHBOARDS_EXPLAINED.md  INFRASTRUCTURE_EXPLAINED.md  INTEL_MODULE_DEPLOYMENT_EXPLAINED.md  LP_DISPATCH_EXPLAINED.md  METER_UPLOAD_PIPELINE_EXPLAINED.md  MLOPS_OBSERVABILITY_EXPLAINED.md  MYENERGI_POLLER_EXPLAINED.md  MYENERGI_UNITS_BUG.md  N8N_WORKFLOWS_EXPLAINED.md  OPERATIONS_MANUAL.md  POLLER_FIX_WALKTHROUGH.md  RAG_ON_NUC_EXPLAINED.md  RAG_PIPELINE_EXPLAINED.md  SOLAR_ADVISORY_EXPLAINED.md  SOLAR_CAPTURE_DASHBOARD_EXPLAINED.md  TARIFF_ENGINE_EXPLAINED.md
docs/funding/: AWS_ACTIVATE_APPLICATION.md  EI_INNOVATION_VOUCHER.md
docs/governance/: AIIA.md  AI_PM_PORTFOLIO_NOTES_TRIAGE.md  DATA_LINEAGE.md  DATA_PROVENANCE.md  FAQ.md  GEMINI_API_MODEL_REGISTRY.md  GOVERNANCE.md  MEETING_NOTES_2026-04-21.md  MODEL_CARD.md  NUC_SERVICES_DIRECTORY.md  ORCHESTRATOR_BRIEF_2026-04-20.md  SYSTEM_ACCESS_MODEL.md  SYSTEM_COMPONENT_MAP.md  TAILSCALE_REMOTE_ACCESS.md
docs/infra/: COMMAND_REFERENCE.md  DOCKER_BEGINNER_GUIDE.md  INFRASTRUCTURE.md  NUC_SETUP_EXPLAINER.md
docs/journal/: APPLIED_ENERGY_SUBMISSION_GUIDE.md
docs/marketing/: linkedin_posts.md
docs/product/: HOME_TRIAL.md
docs/regulatory/: CRU202517_APPENDIX_A_DRAFT.md  SMART_METER_ACCESS.md
docs/research/: CONSUMER_BEHAVIOUR.md  JOURNAL_PAPER_DRAFT.md
docs/team_meetings/: 2026-04-24_strategy_review.md  2026-04-30_strategy_review.md  FRAMEWORK.md
infra/: Caddyfile  apprunner-create.json  apprunner.yaml  cloudflare-tunnel.yml.example
infra/db/: init.sql
intel/: career.py  gradio_app.py  gradio_demo.py  ingest.py  retrieval.py  routes.py
knowledge/: ERRORS.md  INDEX.md
knowledge/domain/: DECISIONS.md  RESULTS.md  SEAI_PROGRAMS.md  TARIFF.md
knowledge/procedural/: RUN_COMMANDS.md
research/: README.md
scripts/: analyze_building_types.py  archive_h1_and_switch_h24.py  backfill_myenergi_eddi.py  build_horizon_table.py  career_ingest.py  career_watch.py  compute_cross_setup_ensembles.py  create_public_snapshot.sh  docker_stats_prom.sh  download_data.py  eval_tft_from_checkpoint.py  export_to_nuc.py  generate_eda_charts.py  generate_paper_figures.py  ingest_changed.py  ingest_watch.py  intel_feeds.py  intel_ingest.py  intel_status.py  log_eddi.py  monitor_drift.py  myenergi_backfill.py  quantile_evaluation.py  rebuild_all_metrics.py  recover_metrics.py  recover_tft_h1_prediction.py  run_dl_h24_only.py  run_drift_check.py  run_grand_ensemble.py  run_home_demo.py  run_horizon_sweep.py  run_oslo.sh  run_pipeline.py  run_quantile_demo.py  run_raw_dl.py  run_stacking_only.py  run_tft_only.py  score_home_plan.py  significance_test.py  verify_tariffs.py
tests/: test_connectors.py  test_context_builder.py  test_data.py  test_drift.py  test_explainability.py  test_features.py  test_integration.py  test_lp_dispatcher.py  test_models.py  test_prediction_store.py  test_registry.py  test_schemas.py  test_validation.py
(+249 files in other folders)
