[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-forecast"
version = "0.1.0"
description = "24-hour ahead electricity load forecasting for Norwegian public buildings using ML and deep learning"
authors = [{ name = "Dan Alexandru Bujoreanu", email = "dan.bujoreanu@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["energy forecasting", "machine learning", "time series", "LSTM", "TFT", "buildings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "missingno>=0.5",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "pyarrow>=12.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
deep-learning = [
    "tensorflow>=2.13",
    "keras>=2.13",
]
tft = [
    "torch>=2.0",
    "pytorch-forecasting>=1.0",
    "pytorch-lightning>=2.0",
]
all = ["energy-forecast[deep-learning,tft]"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
    "ipykernel>=6.25",
    "nbformat>=5.9",
]

[project.urls]
Homepage = "https://github.com/danbujoreanu/building-energy-load-forecast"
Repository = "https://github.com/danbujoreanu/building-energy-load-forecast"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
