[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-forecast"
version = "0.9.0"
description = "Day-ahead (H+24) electricity load forecasting — LightGBM vs Deep Learning Paradigm Parity study. Norwegian public buildings (COFACTOR Drammen/Oslo) + Irish residential home trial."
authors = [{ name = "Dan Alexandru Bujoreanu", email = "dan.bujoreanu@gmail.com" }]
readme = "README.md"
license = { text = "Source-Available Non-Commercial" }
requires-python = ">=3.10"
keywords = ["energy forecasting", "machine learning", "time series", "LSTM", "TFT", "buildings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "missingno>=0.5",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "pyarrow>=12.0",
    "tqdm>=4.65",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
deployment = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "httpx>=0.25",
]
deep-learning = [
    "tensorflow>=2.13",
    "keras>=2.13",
]
tft = [
    "torch>=2.0",
    "pytorch-forecasting>=1.0",
    "pytorch-lightning>=2.0",
]
all = ["energy-forecast[deep-learning,tft,deployment]"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
    "ipykernel>=6.25",
    "nbformat>=5.9",
]

[project.urls]
Homepage = "https://github.com/danbujoreanu/building-energy-load-forecast"
Repository = "https://github.com/danbujoreanu/building-energy-load-forecast"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line too long (black handles this)
    "N803",   # argument name should be lowercase — ML convention: X_train, X_test
    "N806",   # variable in function should be lowercase — ML convention: X, y
    "E402",   # module level import not at top — scripts use conditional imports
    "N802",   # function name should be lowercase — ML helpers: _make_X, _make_y
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/energy_forecast"]
omit = [
    # Visualization modules require matplotlib rendering — not testable in CI
    "src/energy_forecast/visualization/*",
    # DL models require TensorFlow/PyTorch — not installed in CI for speed
    "src/energy_forecast/models/deep_learning.py",
    "src/energy_forecast/models/tft.py",
    # Utility helpers (config, logging) — trivial wrappers, low test value
    "src/energy_forecast/utils/*",
    # SHAP explainability requires shap library — not in CI deps
    "src/energy_forecast/evaluation/explainability.py",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
